CHANGES IN VERSION 1.5.2
------------------------
 o importFrom(Biostrings, readAAStringSet) and import(cleaver) [2014-02-25 Tue]

CHANGES IN VERSION 1.5.1
------------------------
 o typo in vignette [2014-02-18 Tue]

CHANGES IN VERSION 1.5.0
------------------------
 o new devel version for Bioc 2.14

CHANGES IN VERSION 1.3.4
------------------------
 o estimateMasterFdr now support list of vector as pepfiles [2013-09-27 Fri]
 o import(MSnbase) [2013-09-27 Fri]

CHANGES IN VERSION 1.3.3
------------------------
 o Updated references. [2013-07-05 Fri]

CHANGES IN VERSION 1.3.2
------------------------
 o fixed bug when using findEMRTs = "copy" [2013-05-30 Thu]

CHANGES IN VERSION 1.3.1
------------------------
 o Reporting total number of peptides in dbUniquePeptideSet.
   Fixes issue #41. [2013-05-13 Mon]
 o New mergedEMRTs arg in findEMRTs. 
   Closes issue #38. [2013-05-13 Mon] 
 o fixed synapterTiny$QuantPep3DData, which had the rownames 
   as first column synapterTiny$QuantPep3DData$X. Detected 
   thanks to new mergedEMRTs arg. [2013-05-13 Mon]
 o added mergedEMRTs arg to synergise [2013-05-22 Wed]
 o Synapter checks that one file per list element is passed [2013-05-28 Tue]
 o minor typo/fixes [2013-05-28 Tue]
 o new idSource column when matching EMRTs [2013-05-29 Wed]
 o new performance2 method that shows identification source 
   and NA values contingency table [2013-05-29 Wed]
 o new filterPeptideLength method [2013-05-29 Wed]
 o added peplen argument to synergise to filter 
   on peptide length [2013-05-29 Wed]

CHANGES IN VERSION 1.3.0
------------------------
 o Bioc 2.13 devel version bump

CHANGES IN VERSION 1.2.0
------------------------
 o Bioc 2.12 stable version bump

CHANGES IN VERSION 1.1.5
------------------------
 o updated references [2013-03-22 Fri]

CHANGES IN VERSION 1.1.4
------------------------
 o added citation [2013-03-21 Thu]
 o vignette uses knitr engine and scrartcl class [2013-03-21 Thu]

CHANGES IN VERSION 1.1.3