@@ -1,6 +1,7 @@
 CHANGES IN VERSION 1.5.2
 ------------------------
- o importFrom(Biostrings, readAAStringSet) and import(cleaver) [2014-02-25 Tue]
+ o replace readFasta by Biostrings::readAAStringSet [2014-02-25 Tue]
+ o replace digest by cleaver::cleave [2014-02-25 Tue]
 
 CHANGES IN VERSION 1.5.1
 ------------------------
